--- a/android/manoB/app/src/main/AndroidManifest.xml
+++ b/android/manoB/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="rlmi.manob" >
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,5 +17,12 @@
             </intent-filter>
         </activity>
     </application>
-
+    <service
+        android:name=".api.location.MyLocationService"
+        android:exported="true"
+        android:permission="com.google.android.gms.permission.BIND_NETWORK_TASK_SERVICE">
+        <intent-filter>
+            <action android:name="com.google.android.gms.gcm.ACTION_TASK_READY" />
+        </intent-filter>
+    </service>
 </manifest>
